# enigma2

./: .gitignore  .travis.yml  BoxBrandingTest.py  NEWS  Navigation.py  PowerTimer.py  README.md  RecordTimer.py  ServiceReference.py  StartEnigma.py  configure.ac  doxy.conf  e2reactor.py  enigma2.bb  keymapparser.py  mytest.py  skin.py  timer.py
.github/workflows/: enigma2.yml  ovbot.yml
CI/: build.sh
data/: Makefile.am  convert-iso-639-3.py  groupedservices  keymap.xml  menu.xml  radio.mvi  remotes.xml  setup.xml  startwizard.xml  unicable.xml
data/7segment/: skin_display.xml
data/VirtualKeyBoard_Icons/: vkskin.xml
data/display/: Makefile.am
data/keymaps/: us.info
data/rc_models/: Makefile.am  amiko1.xml  amlogic.xml  anadol1.xml  anadol2.xml  ax4.xml  ax51.xml  axas4.xml  azboxhd.xml  azboxme.xml  beyonwiz1.xml  beyonwiz2.xml  cube.xml  dinobot1.xml  dinobot2.xml  dmm0.xml  dmm1.xml  dmm2.xml  dual.xml  ebox5000.xml  edision1.xml  edision2.xml  edision3.xml  et4x00.xml  et6500.xml  et6x00.xml  et7x00.xml  et8000.xml  et9500.xml  et9x00.xml  evo2.xml  evo3.xml  formuler1.xml  fusionhd.xml  gb1.xml  gb2.xml  gb3.xml  gb4.xml  gbtrio4k.xml  gi1.xml  (+57 more)
data/skin_default/: Makefile.am  skin.xml
data/skin_fallback_1080/: Makefile.am  skin.xml  skin_1080.xml
data/vfd128/: Makefile.am
data/vfd255/: skin_display.xml
doc/: BOXINFO_BOXBRANDING  BUTTONGUIDE  RESOLVEFILENAME  SERVICEREF
include/: Makefile.am  hardwaredb.h
lib/actions/: action.cpp  parseactions.py
lib/base/: cfile.cpp  ebase.cpp  eerror.cpp  estring.cpp  httpsstream.cpp  httpstream.cpp  profile.h  rawfile.cpp
lib/driver/: avswitch.cpp  hdmi_cec.cpp  rc.cpp  rcinput.cpp  rcsdl.cpp
lib/dvb/: Makefile.inc  amldecoder.cpp  db.cpp  db.h  decoder.cpp  decoder.h  demux.cpp  demux.h  dvb.cpp  dvb.h  dvbtime.cpp  encoder.cpp  epgcache.cpp  epgcache.h  epgchanneldata.cpp  fastscan.cpp  fastscan.h  fbc.cpp  fcc.h  filepush.cpp  filepush.h  frontend.cpp  frontend.h  frontendparms.cpp  idemux.h  idvb.h  metaparser.cpp  pmt.cpp  pmt.h  pmtparse.cpp  pmtparse.h  pvrparse.cpp  radiotext.cpp  rtspstreamserver.cpp  scan.cpp  scan.h  sec.cpp  sec.h  streamserver.cpp  subtitle.cpp  (+5 more)
lib/dvb_ci/: dvbci.cpp  dvbci.h  dvbci_appmgr.cpp  dvbci_camgr.cpp  dvbci_ccmgr.cpp  dvbci_ccmgr.h  dvbci_datetimemgr.cpp  dvbci_resmgr.cpp  dvbci_session.cpp  res_content_ctrl.cpp
lib/gdi/: Makefile.inc  accel.cpp  epng.cpp  fblcd.cpp  font.cpp  font.h  glcddc.cpp  gpixmap.cpp  gpixmap.h  grc.cpp  grc.h  lcd.cpp  lcd.h  picload.cpp  sdl.cpp
lib/gui/: elistbox.cpp  elistbox.h  elistboxcontent.cpp  elistboxcontent.h  epixmap.cpp  epixmap.h  eslider.h  esubtitle.cpp  ewindow.cpp  ewindowstyleskinned.h
lib/mmi/: mmi_ui.cpp
lib/nav/: core.cpp  core.h
lib/python/: BoxBrandingTest.py  Navigation.py  PowerTimer.py  RecordTimer.py  ServiceReference.py  StartEnigma.py  connections.h  e2reactor.py  enigma_py_patcher.py  enigma_python.i  keymapparser.py  python.cpp  python.h  python_base.i  python_console.i  python_helpers.cpp  python_pmt.i  python_service.i  pythonconfig.cpp  skin.py  timer.py
lib/python/Components/: AVSwitch.py  About.py  ActionMap.py  Button.py  ChannelsImporter.py  ChoiceList.py  ClientMode.py  ConditionalWidget.py  ConfigList.py  Console.py  Element.py  EpgList.py  EpgLoadSave.py  FIFOList.py  FanControl.py  FileList.py  GUIComponent.py  HTMLComponent.py  Harddisk.py  HdmiCec-pli.py  HdmiCec.py  HdmiRecord.py  HelpMenuList.py  ImportChannels.py  Input.py  InputDevice.py  InputHotplug.py  International.py  Keyboard.py  Label.py  Language.py  Language_cache.py  Lcd.py  Makefile.am  MediaPlayer.py  MenuList.py  MovieList.py  MultiContent.py  Netlink.py  Network.py  (+38 more)
lib/python/Components/Addons/: Makefile.am
lib/python/Components/Converter/: Audio.py  BhAnalogic.py  BhStreamInfo.py  CaidInfo2.py  ClientsStreaming.py  ClockToText.py  Combine.py  ConditionalShowHide.py  ConfigEntryTest.py  Converter.py  ConverterRotator.py  CpuUsage.py  EtAnalogClock.py  EventName.py  EventName2.py  ExtendedServiceInfo.py  ExtremeInfo.py  FrontendInfo.py  FrontendInfo2.py  HddState.py  LayoutInfo.py  Makefile.am  MovieBarInfo.py  MovieInfo.py  MovieReference.py  PliExtraInfo.py  ProgressDiskSpaceInfo.py  RdsInfo.py  RefString.py  RemainingToText.py  RotorPosition.py  RouteInfo.py  SensorToText.py  ServiceInfo.py  ServiceInfo2.py  ServiceInfoEX.py  ServiceName.py  ServiceName2.py  ServicePosition.py  ServiceTime.py  (+16 more)
lib/python/Components/Renderer/: AnalogClockLCD.py  AudioIcon.py  Bhclock.py  Canvas.py  ChannelNumber.py  CiModuleControl.py  Cover.py  DRRunningText.py  EmptyEpg.py  EtAnalogClockLCD.py  FrontpanelLed.py  Label.py  LcdPicon.py  Listbox.py  Makefile.am  NextEpgInfo.py  NextEvents.py  PicCript.py  PicEmu2.py  Picon.py  PiconUni.py  Pig.py  Pixmap.py  PositionGauge.py  Progress.py  RollerCharLCD.py  RunningText.py  VRunningText.py  VWatches.py  VideoSize.py  VolumeText.py
lib/python/Components/Sources/: Boolean.py  CanvasSource.py  Config.py  EventInfo.py  FrontendInfo.py  FrontendStatus.py  HddState.py  List.py  Makefile.am  Progress.py  RdsDecoder.py  RecordState.py  Sensor.py  ServiceEvent.py  ServiceList.py  StaticText.py  StreamService.py  TunerInfo.py
lib/service/: Makefile.inc  elistboxservicecontent.cpp  elistboxservicecontent.h  event.cpp  event.h  iservice.h  listboxservice.cpp  listboxservice.h  service.cpp  servicedvb.cpp  servicedvb.h  servicedvbfcc.cpp  servicedvbrecord.cpp  servicedvd.cpp  servicehdmi.cpp  servicem2ts.cpp  servicets.cpp  servicewebts.cpp  servicewebts.h
main/: Makefile.am  bsod.cpp  enigma.cpp
po/: Makefile.am  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  enigma2.pot  es.po  et.po  fa.po  fi.po  fr.po  fy.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ku.po  lt.po  lv.po  mk.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  (+8 more)
tests/: enigma.py  events.py  fake_time.py  test_timer.py
tools/: create_picon_e1_to_e2.py  create_picon_links.py  create_picon_providers.py  create_picon_sats.py  enigma2.sh.in  svg2skin.py
(+229 files in other folders)
